javali_tests/A3/A4_keinestamSchmid/success/Positive.2.2.5.DOUBLE_DECLARATION.javali
// Rule 2.2.5: All classes have unique names.

class Main {
	void main() {
		int i;
	}
}

class A {
	void swap() {
		int j;
	}
}

class B {
	void snoop() {
		int j;
	}
}


