javali_tests/A3/A4_keinestamSchmid/fail/IncorrectBuiltInWriteFloatCall.javali
// Rule 2.3.1: Tests that an incorrect call to writef fails.
class Main {
	void main() {
		writef(0);
	}
}